--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 
-the beginning of math1530 repo. Editing the index page here.
+the beginning of math1530 repo. Editing the index page here 2.
 </body>
 </html>
